Simplify hero smartphone to a single fixed 259px width
Chasing per-breakpoint vw sizing kept reopening overlap with
lp-hero__title at different device heights. Drop all the breakpoint
overrides in favor of one fixed width across every viewport.

--- a/wp-content/themes/cocoon-child-master/css/lp.css
+++ b/wp-content/themes/cocoon-child-master/css/lp.css
@@ -347,7 +347,7 @@ ol {
   position: absolute;
   left: 50%;
   bottom: 0;
-  width: 26.12vw;
+  width: 259px;
   aspect-ratio: 882/1089;
   overflow: hidden;
   pointer-events: none;
@@ -357,21 +357,6 @@ ol {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-@media screen and (max-width: 768px) {
-  .lp-hero__smartphone {
-    width: 82.21vw;
-  }
-}
-@media screen and (min-width: 576px) and (max-width: 768px) {
-  .lp-hero__smartphone {
-    width: 50vw;
-  }
-}
-@media screen and (min-width: 992px) {
-  .lp-hero__smartphone {
-    width: 259px;
-  }
 }
 
 .lp-problem {
